Grundgerüst für SPA mit REST-Backend angelegt (Frontend muss noch angepasst werden)
